[CLOV-1347] Fix retry button icon alignment and restore carhire parity
- Use BpkButton leadingIcon prop instead of withAlignment HOC to fix
  icon vertical alignment (BpkButton activates inline-flex + align-items
  center when leadingIcon is provided)
- Wrap retry label in BpkText label1 to match original carhire typography
- Add button padding override (padding: 0 bpk-spacing-base) in __retry
  to match original Retry__button style
- Add text-align left + RTL swap to system-first/middle/last position
  classes to match original bubble-text-align('left') calls
- Remove withAlignment, iconSizeSm imports and __retry-icon styles
  (no longer needed with leadingIcon approach)

--- a/packages/bpk-component-chat-bubble/src/BpkChatBubble.module.scss
+++ b/packages/bpk-component-chat-bubble/src/BpkChatBubble.module.scss
@@ -201,14 +201,32 @@
 
   &--system-first {
     @include bpk-chat-bubble-corner('left', 'bottom');
+
+    text-align: left;
+
+    @include utils.bpk-rtl {
+      text-align: right;
+    }
   }
 
   &--system-middle {
     @include bpk-chat-bubble-corner('left', 'both');
+
+    text-align: left;
+
+    @include utils.bpk-rtl {
+      text-align: right;
+    }
   }
 
   &--system-last {
     @include bpk-chat-bubble-corner('left', 'top');
+
+    text-align: left;
+
+    @include utils.bpk-rtl {
+      text-align: right;
+    }
   }
 
   &--user-first {
@@ -253,14 +271,10 @@
 
   &__retry {
     margin-top: tokens.bpk-spacing-base();
-  }
 
-  &__retry-icon {
-    margin-right: tokens.bpk-spacing-md();
-
-    @include utils.bpk-rtl {
-      margin-right: 0;
-      margin-left: tokens.bpk-spacing-md();
+    /* stylelint-disable-next-line selector-max-compound-selectors */
+    button {
+      padding: 0 tokens.bpk-spacing-base();
     }
   }
 
